--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <h1 class="logo"><a href="index.html">Darpan</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/clients/client-1.png" alt="logo" class="img-fluid"></a> -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/darpan-logo-2.png" alt="logo" class="img-fluid"></a> -->
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -89,7 +89,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <h4 class="title"><a href="">Writing</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
           </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-palette-line"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <h4 class="title"><a href="">Poetry and Content Writing</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
           </div>
         </div>
@@ -105,7 +105,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-command-line"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <h4 class="title"><a href="">Event Managemnt</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
           </div>
         </div>
@@ -113,7 +113,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-fingerprint-line"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <h4 class="title"><a href="">Web Development</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
           </div>
         </div>
@@ -353,7 +353,7 @@
 
         <div class="section-title">
           <h2>Office Bearers</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -561,7 +561,7 @@
 
         <div class="section-title">
           <h2>pre-final years</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -579,7 +579,7 @@
               </div>
               <div class="member-info">
                 <h4>Harsh Shrivastav</h4>
-                <!-- <span>Chief Executive Officer</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -597,7 +597,7 @@
               </div>
               <div class="member-info">
                 <h4>Shivendra Singh</h4>
-                <!-- <span>Product Manager</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -615,7 +615,7 @@
               </div>
               <div class="member-info">
                 <h4>Abhishek Shingh Silawat</h4>
-                <!-- <span>CTO</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -633,7 +633,7 @@
               </div>
               <div class="member-info">
                 <h4>Garima singh</h4>
-                <!-- <span>Accountant</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -657,7 +657,7 @@
               </div>
               <div class="member-info">
                 <h4>Ashlesha Upadhyay</h4>
-                <!-- <span>Chief Executive Officer</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -675,7 +675,7 @@
               </div>
               <div class="member-info">
                 <h4>Nikita Kumari</h4>
-                <!-- <span>Product Manager</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -693,7 +693,7 @@
               </div>
               <div class="member-info">
                 <h4>Mayank Mani Tripathi</h4>
-                <!-- <span>CTO</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -711,7 +711,7 @@
               </div>
               <div class="member-info">
                 <h4>Sandeep Jaiswal</h4>
-                <!-- <span>Accountant</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -735,7 +735,7 @@
               </div>
               <div class="member-info">
                 <h4>Adarsh</h4>
-                <!-- <span>Chief Executive Officer</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -753,7 +753,7 @@
               </div>
               <div class="member-info">
                 <h4>Ankit Kumar Verma</h4>
-                <!-- <span>Product Manager</span> -->
+                <span>Senior Exicutive Member</span>
               </div>
             </div>
           </div>
@@ -769,7 +769,7 @@
 
         <div class="section-title">
           <h2>second years</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -787,7 +787,7 @@
               </div>
               <div class="member-info">
                 <h4>Prince Maurya</h4>
-                <!-- <span>Chief Executive Officer</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -805,7 +805,7 @@
               </div>
               <div class="member-info">
                 <h4>Mohit kumar</h4>
-                <!-- <span>Product Manager</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -823,7 +823,7 @@
               </div>
               <div class="member-info">
                 <h4>Nikhil Singh</h4>
-                <!-- <span>CTO</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -841,7 +841,7 @@
               </div>
               <div class="member-info">
                 <h4>Abhinav Baranwal</h4>
-                <!-- <span>Accountant</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -865,7 +865,7 @@
               </div>
               <div class="member-info">
                 <h4>Sunidhi Mishra</h4>
-                <!-- <span>Chief Executive Officer</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -883,7 +883,7 @@
               </div>
               <div class="member-info">
                 <h4>Shashank Shekhar Tiwari</h4>
-                <!-- <span>Product Manager</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -901,7 +901,7 @@
               </div>
               <div class="member-info">
                 <h4>Bhura Ram</h4>
-                <!-- <span>CTO</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -919,7 +919,7 @@
               </div>
               <div class="member-info">
                 <h4>Divyanshu Chaturvedi</h4>
-                <!-- <span>Accountant</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -941,7 +941,7 @@
               </div>
               <div class="member-info">
                 <h4>Harsh Raj Singh</h4>
-                <!-- <span>Chief Executive Officer</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -959,7 +959,7 @@
               </div>
               <div class="member-info">
                 <h4>Yuvraj</h4>
-                <!-- <span>Product Manager</span> -->
+                <span>Junior Executive Member</span>
               </div>
             </div>
           </div>
@@ -1382,7 +1382,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Club</h4>
+            <h4>Join hands to educate!</h4>
             <p>Join our club and become the part of a bigger cause.</p>
             <!-- <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
