--- a/index.html
+++ b/index.html
@@ -1277,11 +1277,6 @@
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
-        <div>
-          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d35813.05652073043!2d87.28342587729455!3d23.560570343556655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1671098400078!5m2!1sen!2sin" style="border:0; width: 100%; height: 270px" allowfullscreen></iframe> -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29257.82016881516!2d87.28290664923573!3d23.560270674657104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdarpan%20NIT%20Durgapur!5e0!3m2!1sen!2sin!4v1671098873368!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
         <div class="row mt-5">
 
           <div class="col-lg-4">
@@ -1310,28 +1305,9 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <!-- <form action="forms/contact.php" onsubmit = "sendEmail()" method="post" role="form" class="php-email-form">
-              <div class="row gy-2 gx-md-3">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group col-12">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                </div>
-                <div class="form-group col-12">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <div class="my-3 col-12">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center col-12"><button type="submit">Send Message</button></div>
-              </div>
-            </form> -->
+            <div class="map-responsive">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.5781159595226!2d87.29094961481123!3d23.547671684689657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f772081cede5e9%3A0x33fb9ccb243dfa5!2sNational%20Institute%20of%20Technology%20Durgapur!5e0!3m2!1sen!2sin!4v1675079050931!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
 
           </div>
 
@@ -1409,7 +1385,6 @@
         <a href="https://www.facebook.com/darpan.nitdgp/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/darpan_nitdgp/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/@darpan-nitdurgapur1089" class="google-plus" target="_blank"><i class="bx bxl-youtube"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin" target="_blank"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -1424,7 +1399,6 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
@@ -1449,6 +1423,3 @@
 
 </html>
 
-
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d35813.05652073043!2d87.28342587729455!3d23.560570343556655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1671098400078!5m2!1sen!2sin" width="90%" height="450" style="border:0; width: 100%; height: 270px" allowfullscreen></iframe>
