--- a/index.html
+++ b/index.html
@@ -330,6 +330,25 @@
         <div class="text-center">
           <h3>Faclty Adviser</h3>
           <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="">
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+              <div class="member">
+                <div class="member-img">
+                  <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Harsh Shrivastav</h4>
+                  <span>Senior Exicutive Member</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -381,10 +400,11 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
+                  <a href="https://www.facebook.com/profile.php?id=100024539630775"><i class="bi bi-facebook"></i></a>
+                  <a href=" https://instagram.com/attitude__hunter__?igshid=YmMyMTA2M2Y=
+                  "><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/adarsh-pandey-2a56791b2"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
